--- a/json.html
+++ b/json.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"></script>
     
-    <title>MY WEBSITE</title>
+    <title>MY GIT WEBSITE</title>
 </head>
 <body>
     <table id="data" class="table">
